# launcher-tauri

./: .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE.md  Caddyfile  Cargo.toml  DESIGN.md  README.md  adding-holochain-version.md  appstore_filter_list.json  appstore_filter_list_hc0.1.json  default.nix  dev-setup.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.json  updater.json  updater_0_1_appstore.json  updater_0_2.json  updater_0_3.json  vite.config.ts  vue.config.js
api/: .eslintrc  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
api_scripts/: .gitignore  README.md  package.json  (+4 more)
crates/hc_launch/: Cargo.toml  README.md
crates/hc_launch/src/: cli.rs  cmds.rs  error.rs  index.html  lair_client.rs  lib.rs  utils.rs
crates/hc_launch/src-tauri/: Cargo.toml  tauri.conf.json
crates/hc_launch/src-tauri/src/: cli.rs  error.rs  launch_tauri.rs  lib.rs  prepare_webapp.rs
crates/hc_launch/src-tauri/src/commands/: mod.rs  sign_zome_call.rs
crates/hc_launch/src-tauri/src/utils/: generate_window.rs  mod.rs  prepare_webapp.rs
crates/hc_launch_tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/hc_launch_tauri/src-tauri/src/: cli.rs  error.rs  launch_tauri.rs  main.rs
crates/hc_launch_tauri/src-tauri/src/commands/: sign_zome_call.rs
crates/hc_launch_tauri/src-tauri/src/utils/: mod.rs  prepare_webapp.rs
crates/holochain_launcher_utils/: Cargo.toml  LICENSE_CAL-1.0  README.md
crates/holochain_launcher_utils/scripts/: package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/holochain_launcher_utils/scripts/src/: zomeCallSigning.ts
crates/holochain_launcher_utils/src/: lib.rs  shared_commands.rs  window_builder.rs  zome_call_signing.rs
crates/holochain_launcher_utils/src/scripts/: polyfill.min.js
crates/holochain_manager/: Cargo.toml
crates/holochain_manager/src/: app_manager.rs  config.rs  error.rs  errors.rs  holochain_manager.rs  launch.rs  lib.rs  versions.rs
crates/holochain_manager/src/versions/: common.rs  launch.rs  mod.rs  utils.rs  v0_0_127.rs  v0_0_130.rs  v0_0_131.rs  v0_0_132.rs  v0_0_136.rs  v0_0_139.rs  v0_0_141.rs  v0_0_143.rs  v0_0_145.rs  v0_0_150.rs  v0_0_152.rs  v0_0_153.rs  v0_0_154.rs  v0_0_155.rs  v0_0_156.rs  v0_0_161.rs  v0_0_162.rs  v0_0_165.rs  v0_0_169.rs  v0_0_172.rs  v0_0_172_debug.rs  v0_0_173.rs  v0_0_175.rs  v0_0_175szc.rs  v0_1_0.rs  v0_1_0BetaRc0.rs  v0_1_0_beta_rc1.rs  v0_1_0_beta_rc2.rs  v0_1_0_beta_rc3.rs  v0_1_0_beta_rc4.rs  v0_1_3.rs  v0_1_5.rs  v0_1_6.rs  v0_1_7.rs  v0_2_0.rs  v0_2_0_preview.rs  (+12 more)
crates/holochain_web_app_manager/: Cargo.toml
crates/holochain_web_app_manager/src/: error.rs  installed_web_app_info.rs  lib.rs  running_apps.rs  utils.rs  web_app_manager.rs
crates/holochain_web_app_manager/src/caddy/: manager.rs  mod.rs  utils.rs
crates/lair_keystore_manager/: Cargo.toml
crates/lair_keystore_manager/src/: error.rs  lair_keystore_manager.rs  lib.rs  utils.rs  versions.rs
crates/lair_keystore_manager/src/versions/: init.rs  launch.rs  mod.rs  v0_0_9.rs  v0_1_0.rs  v0_1_1.rs  v0_1_2.rs  v0_1_3.rs  v0_2.rs  v0_2_0.rs  v0_2_1.rs  v0_3.rs
hc_launch/: Cargo.toml
hc_launch/src/: cli.rs  lib.rs  utils.rs
hc_launch/tauri/src-tauri/: Cargo.toml  tauri.conf.json
hc_launch/tauri/src-tauri/src/: main.rs
hc_launch/tauri/src-tauri/src/commands/: sign_zome_call.rs
hc_launch/tauri/src-tauri/src/utils/: generate_window.rs
src-tauri/: .gitignore  Cargo.toml  Cross.toml  entitlements.plist  tauri.conf.json
src-tauri/ /home/guillem/.local/share/holochain/keystore/: pid
src-tauri/ /home/guillem/.local/share/lair/: pid
src-tauri/api_scripts/: package.json  tsconfig.json
src-tauri/api_scripts/src/: index.ts
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  connection_status.rs  factory_reset.rs  file_system.rs  holochain.rs  holochain_version.rs  install_ui.rs  launch.rs  logs.rs  main.rs  menu.rs  running_apps.rs  running_state.rs  setup.rs  state.rs  system_tray.rs  utils.rs
src-tauri/src/caddy/: manager.rs  utils.rs
src-tauri/src/commands/: activate_app.rs  choose_version.rs  config.rs  enable_app.rs  factory_reset.rs  get_admin_port.rs  get_app_info.rs  get_connection_status.rs  get_slots_to_configure.rs  get_state_info.rs  get_web_app_info.rs  icon_src.rs  install_app.rs  install_devhub.rs  install_plugin.rs  mod.rs  network_stats.rs  notification.rs  notifications.rs  open_app.rs  password.rs  quit.rs  restart.rs  save_app.rs  sign_zome_call.rs  start_app.rs  storage.rs  uninstall_app.rs  update_default_ui.rs
src-tauri/src/launcher/: config.rs  default_apps.rs  error.rs  manager.rs  mod.rs  state.rs
src-tauri/src/managers/: caddy.rs  file_system.rs  holochain.rs  launcher.rs  mod.rs  uis.rs
src-tauri/src/managers/holochain/: conductor.rs  config.rs
src-tauri/src/managers/holochain/conductor/: utils.rs
src-tauri/src/managers/holochain/conductor/versions/: V0_0_130.rs  mod.rs  v0_0_130.rs
src-tauri/src/managers/uis/: port_mapping.rs  utils.rs
src-tauri/src/setup/: config.rs  logs.rs  mod.rs  version.rs
src-tauri/src/uis/: activate.rs  caddy.rs  commands.rs  deactivate.rs  install.rs  launch.rs  mod.rs  open.rs  port_mapping.rs  utils.rs
src-tauri/src/web_uis/: caddy.rs  manager.rs  port_mapping.rs
test-app/: .gitignore  Cargo.toml  README.md  default.nix  package-lock.json  package.json
test-app/dnas/clones/workdir/: dna.yaml
test-app/dnas/clones/zomes/coordinator/random/: Cargo.toml
test-app/dnas/clones/zomes/coordinator/random/src/: lib.rs  message.rs
test-app/dnas/clones/zomes/integrity/random/: Cargo.toml
test-app/dnas/clones/zomes/integrity/random/src/: lib.rs  message.rs
test-app/nix/: sources.json
test-app/tests/: package.json  tsconfig.json
test-app/tests/src/clones/random/: message.test.ts
test-app/ui/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
test-app/ui/src/: contexts.ts  holochain-app.ts
test-app/ui/src/clones/random/: create-message.ts  edit-message.ts  message-detail.ts  types.ts
test-app/workdir/: happ.yaml  web-happ.yaml
(+127 files in other folders)
