[workspace]
members = [
  "crates/holochain*",
  "crates/lair_keystore_manager",
  "crates/hc_launch/src-tauri",
  "src-tauri",
]
resolver = "2"


[workspace.dependencies]
# NEW_VERSION Update holochain dependencies here
holochain = { version = "0.4.0-dev.1" }
holochain_cli_sandbox = "0.4.0-dev.1"
holochain_nonce = "0.4.0-dev.1"
holochain_types = "0.4.0-dev.1"
holochain_util = { version = "0.4.0-dev.1", features = [ "pw" ] }
holochain_zome_types = "0.4.0-dev.1"
holochain_conductor_api = "0.4.0-dev.1"
holochain_trace = "0.4.0-dev.1"
holochain_state = "0.4.0-dev.1"

hdk = "0.4.0-dev.1"

holochain_client = "0.6.0-dev.0"

lair_keystore_api = "0.4.4"

mr_bundle = "0.4.0-dev.1"

devhub_types = { git = "https://github.com/matthme/devhub-dnas", branch = "holochain-0.3.0-beta-dev.20" }
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "holochain-0.3.0-beta-dev.20" }