[workspace]
members = [
  "crates/holochain*",
  "crates/hc_launch/src-tauri",
]
resolver = "2"


[workspace.dependencies]
# NEW_VERSION Update holochain dependencies here
holochain_cli_sandbox = "0.3.1-rc.1"
holochain_types = "0.3.1-rc.1"
holochain_util = { version = "0.3.1-rc.0", features = [ "pw" ] }
holochain_zome_types = "0.3.1-rc.1"
holochain_conductor_api = "0.3.1-rc.1"
holochain_trace = "0.3.1-rc.0"

holochain_client = "0.5.0-rc.1"

lair_keystore_api = "0.4.4"

mr_bundle = "0.3.1-rc.1"
