[package]
authors = ["guillem.cordoba@gmail.com"]
build = "build.rs"
default-run = "holochain-launcher"
description = "Holochain launcher to run Holochain locally in your desktop"
edition = "2021"
license = ""
name = "holochain-launcher"
repository = ""
version = "0.9.999"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]

# NEW_VERSION update holochain client version if requireds
holochain_client = { git = "https://github.com/matthme/holochain-client-rust", branch = "holochain-0.2.1-beta-dev.0" }

holochain_manager = { path = "../crates/holochain_manager" }
holochain_launcher_utils = { path = "../crates/holochain_launcher_utils" }
holochain_web_app_manager = { path = "../crates/holochain_web_app_manager" }
lair_keystore_manager = { path = "../crates/lair_keystore_manager" }

# NEW_VERSION update holochain dependencies
holochain_types = "0.2.1-beta-dev.0"
holochain_state = "0.2.1-beta-dev.0"
hdk = "0.2.1-beta-dev.0"

holochain = { version = "0.2.1-beta-dev.0", features = ["sqlite-encrypted"] }

mr_bundle = "0.2.1-beta-dev.0"

devhub_types = { git = "https://github.com/matthme/devhub-dnas", branch = "holochain-0.2.1-beta-dev.0" }


async-trait = "0.1.52"
chrono = {version = "0.4", features = ["serde"] }
dirs-next = "2.0.0"
futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
open = "2.0.1"
opener = "0.5.0"
portpicker = "0.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tauri = {version = "1.2.3", features = ["cli", "clipboard-write-text", "devtools", "dialog-all", "native-tls-vendored", "reqwest-native-tls-vendored", "shell-open", "system-tray", "updater"] }
thiserror = "1.0.30"
url2 = "0.0.6"
mime_guess = "2.0.4"


[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
