[package]
authors = ["guillem.cordoba@gmail.com"]
build = "build.rs"
default-run = "holochain-launcher"
description = "Holochain launcher to run Holochain locally in your desktop"
edition = "2021"
license = ""
name = "holochain-launcher"
repository = ""
version = "0.11.6"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]

holochain_client = { workspace = true }

holochain_manager = { path = "../crates/holochain_manager" }
holochain_launcher_utils = { path = "../crates/holochain_launcher_utils" }
holochain_web_app_manager = { path = "../crates/holochain_web_app_manager" }
lair_keystore_manager = { path = "../crates/lair_keystore_manager" }

holochain_types = { workspace = true }
holochain_state = { workspace = true }
hdk = { workspace = true }

holochain = { workspace = true }

mr_bundle = { workspace = true }

devhub_types = { workspace = true }

mere_memory_types = { workspace = true }


async-recursion = "1.0.4"
async-trait = "0.1.52"
chrono = {version = "0.4", features = ["serde"] }
dirs-next = "2.0.0"
futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
open = "5.0.0"
opener = "0.6.1"
portpicker = "0.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = "0.25.0"
tauri = {version = "1.5.1", features = ["cli", "clipboard-write-text", "devtools", "dialog-all", "icon-png", "native-tls-vendored", "notification", "reqwest-native-tls-vendored", "shell-open", "system-tray", "updater"] }
tauri-plugin-single-instance = { git = "https://github.com/matthme/plugins-workspace", branch = "single-instance-semver" }
thiserror = "1.0.30"
url2 = "0.0.6"
mime_guess = "2.0.4"


[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
