[package]
name = "holochain_launcher_utils"
version = "0.0.5"
edition = "2021"
description = "Shared utils used by Holochain Launcher and the hc launch CLI (holochain_cli_launch)"
license-file = "LICENSE_CAL-1.0"
homepage = "https://developer.holochain.org"
documentation = "https://docs.rs/holochain_launcher_utils"
repository = "https://github.com/holochain/launcher"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# NEW_VERSION update holochain dependencies
holochain_client = "0.4.0"

holochain_conductor_api = "0.2.0-beta-rc.6"
holochain_types = "0.2.0-beta-rc.6"
holochain_zome_types = "0.2.0-beta-rc.5"

lair_keystore_api = "0.2.3"


log = "0.4.14"
mime_guess = "2.0.4"
open = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2.3", features = ["clipboard-write-text", "dialog-all", "devtools", "native-tls-vendored", "reqwest-native-tls-vendored"] }

