[package]
name = "holochain_launcher_utils"
version = "0.0.5"
edition = "2021"
description = "Shared utils used by Holochain Launcher and the hc launch CLI (holochain_cli_launch)"
license-file = "LICENSE_CAL-1.0"
homepage = "https://developer.holochain.org"
documentation = "https://docs.rs/holochain_launcher_utils"
repository = "https://github.com/holochain/launcher"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

holochain_client = "0.3.0"

holochain_conductor_api = "0.1.3"
holochain_types = "0.1.3"
holochain_zome_types = "0.1.1"

lair_keystore_api = "0.2.3"


log = "0.4.14"
mime_guess = "2.0.4"
open = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.10", features = ["native-tls-vendored"] }
