[package]
edition = "2021"
name = "holochain_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NEW_VERSION pick right client version

holochain = { git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67", features = ["sqlite-encrypted"] }
holochain_client = { git = "https://github.com/holochain/holochain-client-rust", branch = "holochain-0.2.1-8cdd455" }


# NEW_VERSION add latest crates here
holochain_conductor_api_0_3_0 = { package = "holochain_conductor_api", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }
holochain_p2p_0_3_0 = { package = "holochain_p2p", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }
holochain_types_0_3_0 = { package = "holochain_types", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }

mr_bundle = { package = "mr_bundle", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }


lair_keystore_manager = {path = "../lair_keystore_manager"}

ascii = "1.0.0"
async-trait = "0.1.52"
enum_dispatch = "0.3.8"
log = "0.4.14"
portpicker = "0.1.1"
serde = {version = "1", features = ["derive"]}
serde-enum-str = "0.2"
serde_yaml = "0.8"
tauri = {version = "1.3.0", features = ["native-tls-vendored", "reqwest-native-tls-vendored"]}
thiserror = "1.0.30"
url2 = "0.0.6"
