[package]
edition = "2021"
name = "holochain_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NEW_VERSION pick right client version

holochain = { workspace = true }
holochain_client = { workspace = true }


# NEW_VERSION add latest crates here
holochain_conductor_api_0_2_2 = { package = "holochain_conductor_api", version = "0.2.2" }
holochain_p2p_0_2_2 = { package = "holochain_p2p", version = "0.2.2" }
holochain_types_0_2_2 = { package = "holochain_types", version = "0.2.2" }

mr_bundle = { workspace = true }

lair_keystore_manager = {path = "../lair_keystore_manager"}

ascii = "1.0.0"
async-trait = "0.1.52"
enum_dispatch = "0.3.8"
log = "0.4.14"
portpicker = "0.1.1"
serde = {version = "1", features = ["derive"]}
serde-enum-str = "0.2"
serde_yaml = "0.8"
strum = "0.25.0"
strum_macros = "0.25.1"
tauri = {version = "1.4.0", features = ["native-tls-vendored", "reqwest-native-tls-vendored"]}
thiserror = "1.0.30"
url2 = "0.0.6"
