[package]
edition = "2021"
name = "holochain_web_app_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"

holochain_manager = {path = "../holochain_manager"}
lair_keystore_manager = {path = "../lair_keystore_manager"}

fs_extra = "1.2.0"
futures = "0.3"
log = "0.4.14"
portpicker = "0.1.1"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"
tauri = {version = "1.5.1", features = ["native-tls-vendored", "reqwest-native-tls-vendored"]}
thiserror = "1.0.30"
url2 = "0.0.6"
zip = "0.5.0"
