[package]
edition = "2021"
name = "lair_keystore_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# NEW_VERSION update holochain_types, holochain_zome_types and holochain_conductor_api here and if necessary also lair_keystore_api
lair_keystore_api = "0.2.3"
holochain_types = { package = "holochain_types", version = "0.1.0"}
holochain_conductor_api = {package = "holochain_conductor_api", version = "0.1.0"}
holochain_zome_types = {package = "holochain_zome_types", version = "0.1.0"}

holochain_launcher_utils = { path = "../holochain_launcher_utils" }

ascii = "1.0.0"
async-trait = "0.1.52"
log = "0.4.14"
nanoid = "0.4.0"
serde = {version = "1", features = ["derive"]}
serde-enum-str = "0.2"
symlink = "0.1.0"
tauri = { version = "1.2.3", features = ["process-command-api"]}
thiserror = "1.0.30"
url2 = "0.0.6"
url = "2.3.1"
