[package]
edition = "2021"
name = "lair_keystore_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# NEW_VERSION update holochain_types, holochain_zome_types and holochain_conductor_api here and if necessary also lair_keystore_api
lair_keystore_api = "0.2.3"
holochain_conductor_api = { git = "https://github.com/holochain/holochain", package = "holochain_conductor_api", rev = "352bcebe41808b0a5c58cc6f1ed1e1c96149d010" }
holochain_types = { git = "https://github.com/holochain/holochain", package = "holochain_types", rev = "352bcebe41808b0a5c58cc6f1ed1e1c96149d010" }
holochain_zome_types = { git = "https://github.com/holochain/holochain", package = "holochain_zome_types", rev = "352bcebe41808b0a5c58cc6f1ed1e1c96149d010" }

holochain_launcher_utils = { path = "../holochain_launcher_utils" }

ascii = "1.0.0"
async-trait = "0.1.52"
log = "0.4.14"
nanoid = "0.4.0"
serde = {version = "1", features = ["derive"]}
serde-enum-str = "0.2"
symlink = "0.1.0"
tauri = { version = "1.2.3", features = ["process-command-api"]}
thiserror = "1.0.30"
url2 = "0.0.6"
url = "2.3.1"
