[package]
edition = "2021"
name = "lair_keystore_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# NEW_VERSION update holochain_types, holochain_zome_types and holochain_conductor_api here and if necessary also lair_keystore_api
lair_keystore_api = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_types = { workspace = true }
holochain_zome_types = { workspace = true }

holochain_launcher_utils = { path = "../holochain_launcher_utils" }

ascii = "1.0.0"
async-trait = "0.1.52"
log = "0.4.14"
nanoid = "0.4.0"
serde = {version = "1", features = ["derive"]}
serde-enum-str = "0.2"
symlink = "0.1.0"
tauri = { version = "1.4.0", features = ["process-command-api"]}
thiserror = "1.0.30"
url2 = "0.0.6"
url = "2.3.1"
