[package]
name = "holochain_cli_launch"
version = "0.0.1"
description = "A CLI to launch holochain apps in a Holochain Launcher environment for testing and development purposes."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "hc-launch"
path = "src/bin/hc-launch.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
anyhow = "1.0"
futures = "0.3"

holochain_client = { git = "https://github.com/holochain/holochain-client-rust", rev="253a378d2226ede77c37875ed278a0fed118785b"}
holochain_cli_sandbox = "0.0.66"
holochain_types = {package = "holochain_types", git = "https://github.com/holochain/holochain", rev="6ad43c07a23c88fcd54869ca6eaa7c2423ee379b"}
holochain_util = { version = "^0.0.13", features = [ "pw" ] }
holochain_zome_types = {package = "holochain_zome_types", git = "https://github.com/holochain/holochain", rev="6ad43c07a23c88fcd54869ca6eaa7c2423ee379b"}
holochain_conductor_api = {package = "holochain_conductor_api", git = "https://github.com/holochain/holochain", rev="6ad43c07a23c88fcd54869ca6eaa7c2423ee379b"}
holochain = {git = "https://github.com/holochain/holochain", rev="6ad43c07a23c88fcd54869ca6eaa7c2423ee379b"}

lair_keystore_api = "0.2.2"


log = "0.4.14"
mime_guess = "2.0.4"
notify= "5.0.0"
observability = "0.1.3"
portpicker = "0.1.1"
structopt = "0.3"
tempdir = "0.3.7"
thiserror = "1.0.22"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "devtools"] }

tokio = "1.21.2"
tracing = "0.1"
url = "2.3.1"
url2 = "0.0.6"
zip = "0.5.0"

lair_keystore_manager = {path = "../../lair_keystore_manager"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
