[package]
edition = "2021"
name = "holochain_cli_launch"
version = "0.0.13"
description = "A CLI to launch holochain apps in a Holochain Launcher environment for testing and development purposes."
license-file = "LICENSE_CAL-1.0"
homepage = "https://developer.holochain.org"
documentation = "https://docs.rs/holochain_cli_launch"
repository = "https://github.com/holochain/launcher"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hc-launch"
path = "src/bin/hc-launch.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
anyhow = "1.0"
futures = "0.3"


holochain_client = { workspace = true }
holochain_cli_sandbox =  { workspace = true }
holochain_launcher_utils = { path = "../../holochain_launcher_utils" }
holochain_types =  { workspace = true }
holochain_util = { workspace = true }
holochain_zome_types = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_trace = { workspace = true }

holochain = { workspace = true }

lair_keystore_api = { workspace = true }


clap = { version = "4.0", features = [ "derive", "env" ] }
log = "0.4.14"
mime_guess = "2.0.4"
notify= "5.0.0"
observability = "0.1.3"
portpicker = "0.1.1"
tempdir = "0.3.7"
thiserror = "1.0.22"

serde = { version = "1", features = ["derive"] }
tauri = {version = "1.4.0", features = ["clipboard-write-text", "dialog-all", "devtools", "native-tls-vendored", "reqwest-native-tls-vendored", "shell-open"] }
tauri-plugin-localhost = "0.1.0"

tokio = "1.21.2"
tracing = "0.1"
url = "2.3.1"
url2 = "0.0.6"
zip = "0.5.0"




[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]